--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <div class="col-md-4">
           <div id="slider-div">
             <label
-              >Date: <span id="dateLabel1">1/1/2017</span> -
-              <span id="dateLabel2">12/31/2018</span></label
+              >Date: <span id="dateLabel1">January 1, 2017</span> -
+              <span id="dateLabel2">December 31, 2018</span></label
             >
             <div id="date-slider"></div>
           </div>
