--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         <div class="col-md-4">
           <div id="slider-div">
             <label
-              >Date: <span id="dateLabel1">January 1, 2017</span> -
-              <span id="dateLabel2">December 31, 2018</span></label
-            >
+              >Date: <span id="dateLabel1"></span> -
+              <span id="dateLabel2"></span
+            ></label>
             <div id="date-slider"></div>
           </div>
         </div>
@@ -55,7 +55,8 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery-ui.min.js"></script>
     <script src="js/d3.min.js"></script>
+    <script src="//d3js.org/topojson.v2.min.js"></script>
     <!-- Custom JS -->
-    <script src="js/main.js"></script>
+    <script src="js/mainPakGenderMap.js"></script>
   </body>
 </html>
