--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="description" content="" />
-    <title>PK Data Dashboards</title>
+    <title>PK Big Fat Data Dashboards</title>
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <!-- jQuery UI CSS -->
@@ -24,29 +24,52 @@
     <!-- Bootstrap grid setup -->
     <div class="container">
       <div id="selections" class="row">
-        <div class="col-md-4">
-          <div id="slider-div">
-            <label
-              >Date: <span id="dateLabel1"></span> -
-              <span id="dateLabel2"></span
-            ></label>
-            <div id="date-slider"></div>
-          </div>
+        <p id="loading"></p>
+        <div class="col-md-12">
+          <div id="slider"></div>
+          <label
+            ><span id="dateLabel1"></span><span id="dateLabel2"></span
+          ></label>
         </div>
-        <!-- <div class="col-md-4">
-          <select id="var-select" class="form-control">
-            <option selected value="price_usd">Price in dollars</option>
-            <option value="market_cap">Market capitalization</option>
-            <option value="24h_vol">24 hour trading volume</option>
-          </select>
-        </div> -->
       </div>
+
       <div class="row">
-        <div class="col-md-4" id="chart-area1"></div>
-        <div class="col-md-4" id="chart-area2"></div>
-        <div class="col-md-4" id="chart-area3"></div>
-        <div class="col-md-4" id="chart-area4"></div>
-        <div class="col-md-4" id="chart-area5"></div>
+        <div class="col-md-6 chart-area-all" id="chart-area1"></div>
+        <div class="col-md-6 chart-area-all" id="chart-area2"></div>
+      </div>
+
+      <br />
+
+      <div class="allGenderGraphs">
+        <h3 id="allGenderGraphsTitle"></h3>
+        <div class="row">
+          <div class="col-md-4 chart-area-all"></div>
+          <div class="col-md-4 chart-area-all" id="chart-area4"></div>
+          <div class="col-md-4 chart-area-all" id="chart-area5"></div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-4 chart-area-all" id="chart-area3"></div>
+          <div class="col-md-4 chart-area-all"></div>
+          <div class="col-md-4 chart-area-all" id="chart-area7"></div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-4 chart-area-all" id="chart-area6"></div>
+          <div class="col-md-4 chart-area-all"></div>
+          <div class="col-md-4 chart-area-all" id="chart-area8"></div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-3 chart-area-all"></div>
+          <div class="col-md-3 chart-area-all"></div>
+          <div class="col-md-3 chart-area-all"></div>
+          <div class="col-md-3 chart-area-all"></div>
+        </div>
+
+        <div class="row" id="pkMap">
+          <div class="col-md-12 chart-map" id="chart-area9"></div>
+        </div>
       </div>
     </div>
 
@@ -57,6 +80,8 @@
     <script src="js/d3.min.js"></script>
     <script src="//d3js.org/topojson.v2.min.js"></script>
     <!-- Custom JS -->
-    <script src="js/mainPakGenderMap.js"></script>
+    <script src="js/mainStackArea.js"></script>
+    <script src="js/mainMap.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
