Updates to chart sizes and axes ticks

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <br />
 
       <div class="allGenderGraphs">
-        <h3 id="allGenderGraphsTitle"></h3>
+        <h3 id="allGenderGraphsTitle">Account Ownership By Gender</h3>
         <div class="row">
           <div class="col-md-4 chart-area-all"></div>
           <div class="col-md-4 chart-area-all" id="chart-area4"></div>
