Clean code before adding data from 2012 to 2018

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
         </div>
       </div>
 
+      <!-- OUTS - https://stackoverflow.com/questions/58612134/how-to-make-a-sticky-d3-slider-remain-functional-as-page-scrolls -->
+
       <div class="row">
         <div class="col-md-6 chart-area-all" id="chart-area1"></div>
         <div class="col-md-6 chart-area-all" id="chart-area2"></div>
