Pushing clean build right before updating maps

--- a/index.html
+++ b/index.html
@@ -38,19 +38,21 @@
     <div class="container">
       <div id="selections" class="row">
         <p id="loading"></p>
-        <div class="col-md-12">
+        <div class="col-md-10">
           <div id="slider"></div>
           <label
             ><span id="dateLabel1"></span><span id="dateLabel2"></span
           ></label>
         </div>
+        <div class="col-md-2">
+          <div><button id="reset">Reset</button></div>
+        </div>
       </div>
 
-      <!-- OUTS - https://stackoverflow.com/questions/58612134/how-to-make-a-sticky-d3-slider-remain-functional-as-page-scrolls -->
       <h3>Agents and Accounts</h3>
       <div class="row">
-        <div class="col-md-6 chart-area-all" id="chart-area1"></div>
-        <div class="col-md-6 chart-area-all" id="chart-area2"></div>
+        <div class="col-md-6" id="chart-area1"></div>
+        <div class="col-md-6" id="chart-area2"></div>
       </div>
 
       <br />
@@ -58,28 +60,28 @@
       <div class="allGenderGraphs">
         <h3 id="allGenderGraphsTitle">Account Ownership By Gender</h3>
         <div class="row">
-          <div class="col-md-4 chart-area-all"></div>
-          <div class="col-md-4 chart-area-all" id="chart-area4"></div>
-          <div class="col-md-4 chart-area-all" id="chart-area5"></div>
+          <div class="col-md-4"></div>
+          <div class="col-md-4" id="chart-area4"></div>
+          <div class="col-md-4" id="chart-area5"></div>
         </div>
 
         <div class="row">
-          <div class="col-md-4 chart-area-all" id="chart-area3"></div>
-          <div class="col-md-4 chart-area-all"></div>
-          <div class="col-md-4 chart-area-all" id="chart-area7"></div>
+          <div class="col-md-4" id="chart-area3"></div>
+          <div class="col-md-4"></div>
+          <div class="col-md-4" id="chart-area7"></div>
         </div>
 
         <div class="row">
-          <div class="col-md-4 chart-area-all" id="chart-area6"></div>
-          <div class="col-md-4 chart-area-all"></div>
-          <div class="col-md-4 chart-area-all" id="chart-area8"></div>
+          <div class="col-md-4" id="chart-area6"></div>
+          <div class="col-md-4"></div>
+          <div class="col-md-4" id="chart-area8"></div>
         </div>
 
         <div class="row">
-          <div class="col-md-3 chart-area-all"></div>
-          <div class="col-md-3 chart-area-all"></div>
-          <div class="col-md-3 chart-area-all"></div>
-          <div class="col-md-3 chart-area-all"></div>
+          <div class="col-md-3"></div>
+          <div class="col-md-3"></div>
+          <div class="col-md-3"></div>
+          <div class="col-md-3"></div>
         </div>
 
         <div class="row" id="pkMap">
@@ -88,7 +90,7 @@
       </div>
 
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-8">
           <h4 id="Footnote1">
             About This Dashboard:
           </h4>
@@ -108,7 +110,7 @@
             available for at least one country.
           </p>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-8">
           <button onclick="topFunction()" id="myBtn" title="Go to top">
             Back To Top
           </button>
