Checking git parameters

--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
           <div class="col-md-4" id="chart-area8"></div>
        
       </div>
+
+      <p>Making a quick change</p>
       
 
       <br />
