--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
         <div class="col-md-2">
 
           <select name="indicatorType" id="indicatorType" >
-              <option value="false">Accounts and Agents</option>
-              <option value="true">Gender Breakdown</option>
+              <option value="AccAndAgent">Accounts and Agents</option>
+              <option value="gender">Gender Breakdown</option>
+              <option value="MFmap">MF Geo Breakdown</option>
             </select>
         </div>
         
